# aula012

./: README.md  pyproject.toml  use_case.py  vendas.csv
src/interface/classes/: classes_file.py
